# esp32s3_cam

./: CMakeLists.txt  partitions.csv
components/Camear/: CMakeLists.txt  Camear.c
components/Camear/include/: Camear.h
components/Http/: CMakeLists.txt  Http.c
components/Http/include/: Http.h
components/I2C/: CMakeLists.txt  I2C.c
components/I2C/include/: I2C.h
components/JDQ/: CMakeLists.txt  JDQ.c
components/JDQ/include/: JDQ.h
components/LCD/: CMakeLists.txt  lcd_set.c
components/LCD/include/: lcd_set.h  picture.h
components/MAX471/: CMakeLists.txt  MAX471.c
components/MAX471/include/: MAX471.h
components/MQTT_Set/: CMakeLists.txt  MQTT_Set.c
components/MQTT_Set/include/: MQTT_Set.h
components/SHT20/: CMakeLists.txt  SHT20.c
components/SHT20/include/: SHT20.h
components/TSL2584/: CMakeLists.txt  TSL2584.c
components/TSL2584/include/: TSL2584.h
components/UART_Set/: CMakeLists.txt  UART_Set.c
components/UART_Set/include/: UART_Set.h
components/WIFI_Set/: CMakeLists.txt  WIFI_Set.c
components/peripherals/: CMakeLists.txt  spi_set.c
components/peripherals/include/: spi_set.h
components/tasks/: tasks.c
main/: CMakeLists.txt  idf_component.yml  main.c
